AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(gate.out ${SRC_LIST})
#INCLUDE_DIRECTORIES(/usr/lib/include ${PROJECT_SOURCE_DIR}/src/libevent-2.0.21-stable)
INCLUDE_DIRECTORIES(/usr/lib/include ${PROJECT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(gate.out event protoPlug)
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH " ${EXECUTABLE_OUTPUT_PATH})

