SET(LIBPLUG_SRC protoPlug.c)
ADD_LIBRARY(protoPlug SHARED ${LIBPLUG_SRC})
ADD_LIBRARY(protoPlug_static STATIC ${LIBPLUG_SRC})
SET_TARGET_PROPERTIES(protoPlug_static PROPERTIES OUTPUT_NAME "protoPlug")
#SET_TARGET_PROPERTIES(protoPlug PROPERTIES VERSION 1.2 SOVERSION 1)
INSTALL(TARGETS protoPlug protoPlug_static 
LIBRARY DESTINATION lib
ARCHIVE DESTINATION lib)
INSTALL(FILES protoPlug.h DESTINATION /home/wantao/Desktop/gate/lib/)

