AUX_SOURCE_DIRECTORY(. SRC_LIST)
#SET(EXECUTABLE_OUTPUT_PATH /home/wantao/Desktop/srlib/hello-world/hello-world-test/bin)
ADD_EXECUTABLE(hello-test.out ${SRC_LIST})
INCLUDE_DIRECTORIES(/usr/include)
TARGET_LINK_LIBRARIES(hello-test.out event)
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH " ${EXECUTABLE_OUTPUT_PATH})
#FIND_PACKAGE(EVENT)
#IF(EVENT_FOUND)
#        INCLUDE_DIRECTORIES(${EVENT_INCLUDE_DIR})
#        TARGET_LINK_LIBRARIES(EVENT ${CURL_LIBRARY})
#        MESSAGE(STATUS "EVENT library found")
#        MESSAGE(STATUS "EVENT_INCLUDE_DIR " ${EVENT_INCLUDE_DIR})
#        MESSAGE(STATUS "EVENT_LIBRARY " ${EVENT_LIBRARY})
#ELSE(EVENT_FOUND)
#        MESSAGE(FATAL_ERROR "EVENT library not found")
#ENDIF(EVENT_FOUND)
